Remove webkit specific class specifiers. Fixed horizontal transform for scrollbar

--- a/src/scrollview/assets/scrollview-scrollbars-core.css
+++ b/src/scrollview/assets/scrollview-scrollbars-core.css
@@ -17,24 +17,26 @@
     left: 0; 
 }
 
-.yui3-scrollview-scrollbar .yui3-scrollview-b, 
+.yui3-scrollview-scrollbar .yui3-scrollview-top,
+.yui3-scrollview-scrollbar .yui3-scrollview-bottom, 
 .yui3-scrollview-scrollbar .yui3-scrollview-middle { 
     position: absolute; 
-    right: 1px; 
+    right: 0px; 
     display: block; 
     width: 100%; 
     height: 4px;  
 }
 
-.yui3-scrollview-scrollbar .yui3-scrollview-b:first-child { 
+.yui3-scrollview-scrollbar .yui3-scrollview-top { 
     top: 0; 
 }
 
-.yui3-scrollview-scrollbar .yui3-scrollview-b:last-child { 
+.yui3-scrollview-scrollbar .yui3-scrollview-bottom { 
     bottom: 0; 
 }
 
-.yui3-scrollview-scrollbar .yui3-scrollview-middle { 
+.yui3-scrollview-scrollbar .yui3-scrollview-middle {
+    display: -moz-inline-stack; 
     display: inline-block;
     position: absolute; 
     top: 4px; 
@@ -49,13 +51,14 @@
     right: auto;  
 }
 
-.yui3-scrollview-scrollbar.yui3-scrollview-horizontal .yui3-scrollview-b { 
+.yui3-scrollview-scrollbar.yui3-scrollview-horizontal .yui3-scrollview-top,
+.yui3-scrollview-scrollbar.yui3-scrollview-horizontal .yui3-scrollview-bottom { 
     width: 4px; 
     height: 6px; 
 }
 
 .yui3-scrollview-scrollbar.yui3-scrollview-horizontal .yui3-scrollview-middle { 
-    top: auto; 
+    top: auto;
     left: 4px; 
     width: 1px; 
     height: 6px;
