--- a/src/scrollview/assets/skins/sam/scrollview-scrollbars-skin.css
+++ b/src/scrollview/assets/skins/sam/scrollview-scrollbars-skin.css
@@ -1,31 +1,34 @@
-.yui-skin-sam .yui3-scrollview-scrollbar { 
+.yui-skin-sam .yui3-scrollview-scrollbar {
     -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0); 
 }
 
-.yui-skin-sam .yui3-scrollview-scrollbar .yui3-scrollview-b, 
+.yui-skin-sam .yui3-scrollview-scrollbar .yui3-scrollview-top,
+.yui-skin-sam .yui3-scrollview-scrollbar .yui3-scrollview-bottom, 
 .yui-skin-sam .yui3-scrollview-scrollbar .yui3-scrollview-middle { 
     -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;     
+    -moz-border-radius: 3px;
 }
 
-.yui-skin-sam .yui3-scrollview-scrollbar .yui3-scrollview-b { 
+.yui-skin-sam .yui3-scrollview-scrollbar .yui3-scrollview-top,
+.yui-skin-sam .yui3-scrollview-scrollbar .yui3-scrollview-bottom { 
     -webkit-border-bottom-right-radius:0; 
     -webkit-border-bottom-left-radius:0;
-    -moz-border-bottom-right-radius:0; 
-    -moz-border-bottom-left-radius:0; 
+
+    -moz-border-radius-bottomright:0; 
+    -moz-border-radius-bottomleft:0;
     background: rgba(0,0,0,0.4); 
 }
 
-.yui-skin-sam .yui3-scrollview-scrollbar .yui3-scrollview-b:last-child { 
+.yui-skin-sam .yui3-scrollview-scrollbar .yui3-scrollview-bottom { 
     -webkit-border-radius:0; 
     -webkit-border-bottom-right-radius:3px; 
     -webkit-border-bottom-left-radius:3px; 
     -webkit-transform: translate3d(0, 0, 0);
 
     -moz-border-radius:0; 
-    -moz-border-bottom-right-radius:3px; 
-    -moz-border-bottom-left-radius:3px; 
+    -moz-border-radius-bottomright:3px; 
+    -moz-border-radius-bottomleft:3px; 
     -moz-transform: translate3d(0, 0, 0); 
 }
 
@@ -41,20 +44,21 @@
     background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAABCAYAAAD9yd/wAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAABJJREFUeNpiZGBgSGPAAgACDAAIkABoFyloZQAAAABJRU5ErkJggg==);
 }
 
-.yui-skin-sam .yui3-scrollview-scrollbar.yui3-scrollview-horizontal .yui3-scrollview-b { 
-    -webkit-border-top-right-radius: 0; 
+.yui-skin-sam .yui3-scrollview-scrollbar.yui3-scrollview-horizontal .yui3-scrollview-top,
+.yui-skin-sam .yui3-scrollview-scrollbar.yui3-scrollview-horizontal .yui3-scrollview-bottom { 
+    -webkit-border-top-right-radius: 0;
     -webkit-border-bottom-left-radius: 3px;
-    
-    -moz-border-top-right-radius: 0; 
-    -moz-border-bottom-left-radius: 3px; 
+
+    -moz-border-radius-topright: 0;
+    -moz-border-radius-bottomleft: 3px;
 }
 
-.yui-skin-sam .yui3-scrollview-scrollbar.yui3-scrollview-horizontal .yui3-scrollview-b:last-child { 
+.yui-skin-sam .yui3-scrollview-scrollbar.yui3-scrollview-horizontal .yui3-scrollview-bottom { 
     -webkit-border-bottom-left-radius: 0; 
     -webkit-border-top-right-radius: 3px;
 
-    -moz-border-bottom-left-radius: 0; 
-    -moz-border-top-right-radius: 3px; 
+    -moz-border-radius-bottomleft: 0; 
+    -moz-border-radius-topright: 3px; 
 }
 
 .yui-skin-sam .yui3-scrollview-scrollbar.yui3-scrollview-horizontal .yui3-scrollview-middle { 
